--- a/pages/about.html
+++ b/pages/about.html
@@ -113,7 +113,7 @@
                 </li>
            
                 <li><a href="https://github.com/sunjianhua1990s">Github</a></li>
-                <li><a href="http://http://blog.csdn.net/huaxi1902">CSDN</a></li>
+                <li><a href="http://blog.csdn.net/huaxi1902">CSDN</a></li>
                 <li><a href="">知乎</a></li>
                 <li><a href="">豆瓣</a></li>
             </ul>
