--- a/archives.html
+++ b/archives.html
@@ -63,6 +63,66 @@
         <td>02 Jul 2014</td>
         <td><a href='./pages/2014/07/02/hello_world.html'>Hello World</a></td>
         </tr>
+        <tr>
+        <td>14 Jun 2014</td>
+        <td><a href='./pages/2014/06/14/hacker_delifht.html'>《算法心得》一点整理</a></td>
+        </tr>
+        <tr>
+        <td>08 Jun 2014</td>
+        <td><a href='./pages/2014/06/08/head_first_proxy.html'>《Head First 设计模式》学习笔记——代理模式</a></td>
+        </tr>
+        <tr>
+        <td>07 Jun 2014</td>
+        <td><a href='./pages/2014/06/07/head_first_mvc.html'>《Head First 设计模式》学习笔记——复合模式</a></td>
+        </tr>
+        <tr>
+        <td>03 Jun 2014</td>
+        <td><a href='./pages/2014/06/03/alphabet_order.html'>字典序全排列简单研究</a></td>
+        </tr>
+        <tr>
+        <td>02 Jun 2014</td>
+        <td><a href='./pages/2014/06/02/head_first_adapter_facade.html'>《Head First 设计模式》学习笔记——适配器模式 + 外观模式</a></td>
+        </tr>
+        <tr>
+        <td>02 Jun 2014</td>
+        <td><a href='./pages/2014/06/02/head_first_iterator_composite.html'>《Head First 设计模式》学习笔记——迭代器模式 + 组合模式</a></td>
+        </tr>
+        <tr>
+        <td>02 Jun 2014</td>
+        <td><a href='./pages/2014/06/02/head_first_state.html'>《Head First 设计模式》学习笔记——状态模式</a></td>
+        </tr>
+        <tr>
+        <td>02 Jun 2014</td>
+        <td><a href='./pages/2014/06/02/head_first_template_method.html'>《Head First 设计模式》学习笔记——模板方法模式</a></td>
+        </tr>
+        <tr>
+        <td>01 Jun 2014</td>
+        <td><a href='./pages/2014/06/01/head_first_command.html'>《Head First 设计模式》学习笔记——命令模式</a></td>
+        </tr>
+        <tr>
+        <td>30 May 2014</td>
+        <td><a href='./pages/2014/05/30/head_first_singleton.html'>《Head First 设计模式》学习笔记——单件模式</a></td>
+        </tr>
+        <tr>
+        <td>29 May 2014</td>
+        <td><a href='./pages/2014/05/29/head_first_factory.html'>《Head First 设计模式》学习笔记——工厂模式 + 抽象工厂模式</a></td>
+        </tr>
+        <tr>
+        <td>28 May 2014</td>
+        <td><a href='./pages/2014/05/28/head_first_observer_decorator.html'>《Head First 设计模式》学习笔记——观察者模式 + 装饰者模式</a></td>
+        </tr>
+        <tr>
+        <td>27 May 2014</td>
+        <td><a href='./pages/2014/05/27/head_first_strategy.html'>《Head First 设计模式》学习笔记——策略模式</a></td>
+        </tr>
+        <tr>
+        <td>25 May 2014</td>
+        <td><a href='./pages/2014/05/25/python_study.html'>Python边学边用</a></td>
+        </tr>
+        <tr>
+        <td>23 May 2014</td>
+        <td><a href='./pages/2014/05/23/beautiful_code_preliminary_2.html'>编程之美初赛第二场 集合</a></td>
+        </tr>
     </tbody>
 </table>
 
@@ -104,7 +164,7 @@
                 Links
                 </li>
             
-                <li><a href="https://www.google.com/ncr">Google</a></li>
+                <li><a href="http://74.125.20.33/">Google</a></li>
                 <li><a href="http://python.org/">Python</a></li>
                 <li><a href="http://docs.getpelican.com/">Pelican</a></li>
             </ul>
