--- a/authors.html
+++ b/authors.html
@@ -50,7 +50,7 @@
     <div class="row">
 
         <div class="span9">
-    <h1>Authors on Build the World</h1>        <li><a href="./author/sunjianhua.html">sunjianhua</a> (2)</li>
+    <h1>Authors on Build the World</h1>        <li><a href="./author/sunjianhua.html">sunjianhua</a> (17)</li>
         </div>
         
         <div class="span3">
@@ -88,7 +88,7 @@
                 Links
                 </li>
             
-                <li><a href="https://www.google.com/ncr">Google</a></li>
+                <li><a href="http://74.125.20.33/">Google</a></li>
                 <li><a href="http://python.org/">Python</a></li>
                 <li><a href="http://docs.getpelican.com/">Pelican</a></li>
             </ul>
