--- a/categories.html
+++ b/categories.html
@@ -92,7 +92,7 @@
                 Links
                 </li>
             
-                <li><a href="https://www.google.com/ncr">Google</a></li>
+                <li><a href="http://74.125.20.33/">Google</a></li>
                 <li><a href="http://python.org/">Python</a></li>
                 <li><a href="http://docs.getpelican.com/">Pelican</a></li>
             </ul>
