--- a/tags.html
+++ b/tags.html
@@ -51,8 +51,29 @@
 
         <div class="span9">
 <ul>
-    <li><a href="./tag/prime.html">prime</a></li>
+    <li><a href="./tag/dai-li-mo-shi.html">代理模式</a></li>
+    <li><a href="./tag/zi-ran-shu-e.html">自然数e</a></li>
+    <li><a href="./tag/mo-ban-fang-fa-mo-shi.html">模板方法模式</a></li>
+    <li><a href="./tag/fu-he-mo-shi.html">复合模式</a></li>
+    <li><a href="./tag/bian-cheng-zhi-mei.html">编程之美</a></li>
+    <li><a href="./tag/she-ji-mo-shi.html">设计模式</a></li>
+    <li><a href="./tag/wai-guan-mo-shi.html">外观模式</a></li>
+    <li><a href="./tag/gong-han-mo-shi.html">工厂模式</a></li>
+    <li><a href="./tag/su-shu.html">素数</a></li>
     <li><a href="./tag/hello-world.html">hello world</a></li>
+    <li><a href="./tag/gua-pei-qi-mo-shi.html">适配器模式</a></li>
+    <li><a href="./tag/dan-jian-mo-shi.html">单件模式</a></li>
+    <li><a href="./tag/zhuang-tai-mo-shi.html">状态模式</a></li>
+    <li><a href="./tag/zu-he-mo-shi.html">组合模式</a></li>
+    <li><a href="./tag/python.html">Python</a></li>
+    <li><a href="./tag/zi-dian-xu.html">字典序</a></li>
+    <li><a href="./tag/suan-fa-wei-cao-zuo.html">算法，位操作</a></li>
+    <li><a href="./tag/die-dai-qi-mo-shi.html">迭代器模式</a></li>
+    <li><a href="./tag/guan-cha-zhe-mo-shi.html">观察者模式</a></li>
+    <li><a href="./tag/ming-ling-mo-shi.html">命令模式</a></li>
+    <li><a href="./tag/ce-lue-mo-shi.html">策略模式</a></li>
+    <li><a href="./tag/zhuang-shi-zhe-mo-shi.html">装饰者模式</a></li>
+    <li><a href="./tag/chou-xiang-gong-han-mo-shi.html">抽象工厂模式</a></li>
 </ul>
         </div>
         
@@ -91,7 +112,7 @@
                 Links
                 </li>
             
-                <li><a href="https://www.google.com/ncr">Google</a></li>
+                <li><a href="http://74.125.20.33/">Google</a></li>
                 <li><a href="http://python.org/">Python</a></li>
                 <li><a href="http://docs.getpelican.com/">Pelican</a></li>
             </ul>
