--- a/archives.html
+++ b/archives.html
@@ -56,8 +56,12 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>07 Aug 2014</td>
+        <td><a href='./pages/2014/08/07/google_prime_2.html'>一道google面试题（中）</a></td>
+        </tr>
+        <tr>
         <td>27 Jul 2014</td>
-        <td><a href='./pages/2014/07/27/google_prime.html'>一道google面试题</a></td>
+        <td><a href='./pages/2014/07/27/google_prime_1.html'>一道google面试题（上）</a></td>
         </tr>
         <tr>
         <td>02 Jul 2014</td>
