--- a/archives.html
+++ b/archives.html
@@ -56,6 +56,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>27 Aug 2014</td>
+        <td><a href='./pages/2014/08/27/google_prime_3.html'>一道google面试题（下）</a></td>
+        </tr>
+        <tr>
         <td>07 Aug 2014</td>
         <td><a href='./pages/2014/08/07/google_prime_2.html'>一道google面试题（中）</a></td>
         </tr>
