--- a/tags.html
+++ b/tags.html
@@ -66,6 +66,7 @@
     <li><a href="./tag/zhuang-tai-mo-shi.html">状态模式</a></li>
     <li><a href="./tag/zu-he-mo-shi.html">组合模式</a></li>
     <li><a href="./tag/python.html">Python</a></li>
+    <li><a href="./tag/zi-ran-shu-esu-shu.html">自然数e，素数</a></li>
     <li><a href="./tag/zi-dian-xu.html">字典序</a></li>
     <li><a href="./tag/suan-fa-wei-cao-zuo.html">算法，位操作</a></li>
     <li><a href="./tag/die-dai-qi-mo-shi.html">迭代器模式</a></li>
