--- a/pages/about.html
+++ b/pages/about.html
@@ -57,7 +57,7 @@
     </h2>
     <p>大家好，我来自西工大，这是我的博客。</p>
 <p>这个博客使用Pelican技术，采用极简Style搭建在Github上，以后将持续记录个人的成长历程。原来的<a href="http://blog.csdn.net/huaxi1902">CSDN博客</a>将不再更新。</p>
-<p>我使用<a href="https://gist.github.com/sunjianhua1990s">Gist</a>维护个人简历，现在时应届生求职状态。</p>
+<p>我使用<a href="https://gist.github.com/sunjianhua1990s">Gist</a>维护个人简历，目前应届生求职状态。</p>
 <p>15年4月份就研究生毕业了，希望时间过的再快些！</p>
 </section>
         </div>
