--- a/archives.html
+++ b/archives.html
@@ -56,6 +56,10 @@
 <table class="table">
     <tbody>
         <tr>
+        <td>30 Dec 2014</td>
+        <td><a href='./pages/2014/12/30/past_four_mounths.html'>最近四个月</a></td>
+        </tr>
+        <tr>
         <td>27 Aug 2014</td>
         <td><a href='./pages/2014/08/27/google_prime_3.html'>一道google面试题（下）</a></td>
         </tr>
